--- a/util/amisc/astrip.1
+++ b/util/amisc/astrip.1
@@ -11,7 +11,7 @@ ack.out(5) format object files.
 This is useful to save space after a program has been
 debugged.
 .SH FILES
-.IP /tmp/s? 16n
+.IP /data/data/com.termux/files/usr/tmp/s? 16n
 temporary file
 .SH "SEE ALSO"
 ack.out(5)
