--- a/util/arch/aal.1
+++ b/util/arch/aal.1
@@ -68,7 +68,7 @@ it gives a long listing of all information about the files.
 Local.
 Normally
 .I aal
-places its temporary files in the directory /tmp.
+places its temporary files in the directory /data/data/com.termux/files/usr/tmp.
 This option causes them to be placed in the local directory.
 .TP
 .B c
@@ -81,7 +81,7 @@ The create option supresses the normal message that is produced when
 .I afile
 is created.
 .SH FILES
-.IP /tmp/ar.* 16
+.IP /data/data/com.termux/files/usr/tmp/ar.* 16
 temporaries
 .SH "SEE ALSO"
 led(6), arch(5)
