--- a/util/arch/arch.1
+++ b/util/arch/arch.1
@@ -73,7 +73,7 @@ it precedes each file with a name.
 Local.
 Normally
 .I arch
-places its temporary files in the directory /tmp.
+places its temporary files in the directory /data/data/com.termux/files/usr/tmp.
 This option causes them to be placed in the local directory.
 .TP
 .B c
@@ -86,7 +86,7 @@ The create option supresses the normal message that is produced when
 .I afile
 is created.
 .SH FILES
-/tmp/ar.* temporaries
+/data/data/com.termux/files/usr/tmp/ar.* temporaries
 .SH "SEE ALSO"
 em_ass(1), arch(5),
 .SH BUGS
