--- a/util/opt/em_opt.6
+++ b/util/opt/em_opt.6
@@ -29,7 +29,7 @@ Integer overflow detection is lost with this option.
 .IP \-ml<num>
 Like \-m<num>, but also for long multiplies.
 .SH "FILES"
-/tmp/emopt??????, is used when the \-L flag is given only.
+/data/data/com.termux/files/usr/tmp/emopt??????, is used when the \-L flag is given only.
 .SH "SEE ALSO"
 ack(1)
 .PD 0
